--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     background-color:  hsl(0, 0%, 8%);
     font-family:Arial, Helvetica, sans-serif;
 }
-.profile {
+header {
     background-color: hsl(0, 0%, 12%);
     text-align: center;
     margin: 40px auto;
@@ -28,10 +28,6 @@ p {
     font-size: 13px;
     color: rgb(189, 179, 179);
     margin-top: 30px;
-}
-.button {
-    display: flex;
-    flex-direction: column;
 }
 button {
     margin: 10px auto;
