--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     background-color:  hsl(0, 0%, 8%);
     font-family:Arial, Helvetica, sans-serif;
 }
-.section {
+.main {
     background-color: hsl(0, 0%, 12%);
     text-align: center;
     margin: 40px auto;
